# tp_1st

./: CMakeLists.txt  README.md
.github/workflows/: CMake.yml
src/: CMakeLists.txt
task0/: README.md
task1/: run.sh
task2/: CMakeLists.txt
task2/A/: index.h  preparing.py
task2/B/: CMakeLists.txt  lib.cpp  lib.h
task2/C/: main.cpp  main.h  main_test.cpp
task3/: CMakeLists.txt
task3/src/: CMakeLists.txt
task4/: .gitignore  requirements.txt
task4/task-testing-python/: .gitignore
task4/task-testing-python/mama/sun/: text2.txt
task4/task-testing-python/tests/test_02/: test_size_tree.py  test_tree.py
task4/task-testing-python/tests/test_03/: test_weather.py
task4/tests/test_01/: test_add.py  test_get_month_days.py  test_leap.py
task4/tests/test_02/: test_size_tree.py  test_tree.py
task4/tests/test_03/: test_weather.py
task5/: Dockerfile
task5/cmake-with-flask/: Dockerfile
task5/task5/: Dockerfile
task5/task5/docker/: Dockerfile
task5/task5/scripts/: CREATE.sql
